checkin front end html and css

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -4,3 +4,146 @@
 *:after {
   box-sizing: border-box;
 }
+
+body {
+  background-image: url("../images/site/checkerboard.jpg");
+  margin: 0;
+  /* background-size:cover; */
+}
+
+#wrapper {
+  width: 75%;
+  margin-top: 10%;
+  background-color: white;
+  border: 5px solid aqua;
+  margin: 0 auto;
+  border-radius: 15px;
+}
+
+.siteName {
+  margin-left: 15px;
+  /* margin-top: 35px; */
+  font-size: xx-large;
+}
+
+#tools {
+  text-align: right;
+  margin-right: 15px;
+  /* margin-top: 1px; */
+}
+
+#nav {
+	margin-left: 2%;
+  margin-right: 2%;
+	padding-top:10px;
+  padding-bottom: 10px;
+  color: white;
+  background-color: black;
+}
+
+#nav li {
+	display:inline;
+	padding:100px;
+	margin:0;
+}
+
+div #mainpart {
+  background-image: url("../images/vehicles/delorean.jpg");
+  background-size: contain;
+  background-repeat: no-repeat;
+  height: 300px;
+  margin: 0;
+  background-position: center;
+}
+
+#mainlist {
+  background-color: white;
+  max-width: 15%;
+  opacity: 75%;
+  margin-left: 15%;
+}
+
+#mainlist li{
+  display: flexbox;
+  list-style-type: none;
+  /* max-width: 25%; */
+  /* opacity: 75%; */
+}
+
+.mainlisttitle {
+  color:cadetblue ;
+  font-size: larger;
+  font-weight: bold;
+}
+
+.mainlistgroup {
+  color:cadetblue;
+  /* font-size: larger; */
+}
+
+.mainbutton {
+  padding: 20px;
+  background-color: cadetblue;
+  margin-top: 10px;
+  /* margin: 10px; */
+  font-weight: bold;
+}
+
+.leftdiv {
+  width: 36.8vw;
+  height: 300px;
+  float: left;
+  /* background-color: brown; */
+}
+
+.rightdiv {
+  width: 43.2vw;
+  height: 300px;
+  float: right;
+  /* background-color: brown; */
+}
+
+.leftdiv h2 {
+  margin-left: 2%;
+}
+
+.rightdiv h2 {
+  margin-left: 2%;
+}
+
+.upgradegallery {
+  width: 30.8vw;
+  height: 300px;
+  display: grid;
+  grid-template-columns: repeat(2, 1fr);
+  grid-template-rows: repeat(2, 5vw);
+  grid-gap: 15px;
+  float: left;
+}
+
+.gallery__img {
+  width: 50%;
+  height: 75%;
+  object-fit: 50%;
+  background-color: cadetblue;
+}
+
+/* .flux {
+  background-image: url("../images/upgrades/flux-cap.png");
+  margin: 0;
+}
+
+.flame {
+  background-image: url("../images/upgrades/flame.jpg");
+  margin: 0;
+}
+
+.bumper {
+  background-image: url("../images/upgrades/bumper_sticker.jpg");
+  margin: 0;
+}
+
+.hub{
+  background-image: url("../images/upgrades/hub-cap.jpg");
+  margin: 0;
+} */
