--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,7 +37,6 @@ nav {
   margin-right: 2%;
 	padding-top:10px;
   padding-bottom: 10px;
-  color: white;
   background-color: black;
 }
 
@@ -45,6 +44,10 @@ nav li {
 	display:inline;
 	padding:70px;
 	margin:0;
+}
+
+nav a {
+  color: white;
 }
 
 div #mainpart {
