--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,4 +1,5 @@
 <h1>Welcome to CSE Motors!</h1>
+<%- messages() %>
 <div id="mainpart">
     <ul id="mainlist">
         <li class="mainlisttitle">DMC Delorean</li>
