--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -2,7 +2,7 @@
     <span class="siteName">
       <a href="/" title="Return to home page">CSE Motors</a>
     </span>
-    <div id="tools">
-      <a title="Click to log in" href="/account/login">My Account</a>
-    </div>
+    <span class="myaccount">
+      <a href="/account/login" title="Login" >My Account</a>
+    </span>
 </header>
