added validation on login and registration

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -182,6 +182,10 @@ div.container a {
   margin-left: 10%;
 }
 
+div.container span {
+  margin-left: 10%;
+}
+
 div.container ul {
   display: block;
   color: white;
