--- a/views/account/register.ejs
+++ b/views/account/register.ejs
@@ -6,7 +6,15 @@
     } %>
 
 <!-- Message -->
-<%# messages() %>
+<%- messages() %>
+
+<% if (errors) { %>
+  <ul class="notice">
+ <% errors.array().forEach(error => { %>
+   <li><%= error.msg %></li>
+<%  }) %>
+ </ul>
+<% } %>
 
 <form action="/account/register" method="post">
 
