Created login capabilities

--- a/views/account/management.ejs
+++ b/views/account/management.ejs
@@ -8,8 +8,4 @@
 <!-- Message -->
 <%- messages() %>
 
-<form id="loginForm" action="/account/login" method="post">
-  <%- login %>
-</form>
-
-
+<h3>You're Logged in</h3>
