Added A view all inventory

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -1,5 +1,8 @@
 <h1>Welcome to CSE Motors!</h1>
 <%- messages() %>
+<div id="viewall">
+    <a href="/inv/allinventory" title="View All Inventory"> <h2>View All Inventory</h2></a>
+</div>
 <div id="mainpart">
     <ul id="mainlist">
         <li class="mainlisttitle">DMC Delorean</li>
@@ -27,16 +30,6 @@
         <a href="/" title="Go to Hub Caps">Hub Caps</a>
     </figure>
 </div>
-
-<!-- <div class="leftdiv">
-    <h2>Delorean Upgrades</h2>
-    <ul id="leftlist">
-        <li class="flux">Flux Capacitor</li>
-        <li class="flame">Flame Decals</li>
-        <li class="bumper">Bumper Stickers</li>
-        <li class="Hub">Hub Caps</li>
-    </ul>
-</div> -->
 <div class="rightdiv">
     <h2>DMC Delorean Reviews</h2>
     <ul id="rightlist">
