--- a/views/inventory/editvehicle.ejs
+++ b/views/inventory/editvehicle.ejs
@@ -8,6 +8,6 @@
 <!-- Message -->
 <%- messages() %>
 
-<%- manage %>
-
-<script src="../../js/inventory.js"></script>
+<form action="/inv/editvehicle" method="post">
+    <%- editvehicle %>
+</form>
