--- a/views/partials/header.ejs
+++ b/views/partials/header.ejs
@@ -4,5 +4,6 @@
     </span>
     <span class="myaccount">
       <a href="/account/login" title="Login" >My Account</a>
+      <!-- <a href="/account/logout" title="Logout" >Logout</a> -->
     </span>
 </header>
